[tool.poetry]
name = "nonebot-plugin-wx4"
version = "1.1.0"
description = ""
authors = ["pasumao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nonebot2 = "^2.1.3"
requests = "^2.31.0"
nonebot-adapter-onebot = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
