[tool.poetry]
name = "nonebot-plugin-wx4"
version = "1.3.1"
description = ""
authors = ["pasumao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
nonebot2 = "^2.0.0"
httpx = "^0.24.1"
nonebot-adapter-onebot = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
